--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -12,7 +12,7 @@
         #butt,
         #photo,
         #etext {
-            width: 30vw;
+            width: 30vh;
             height: 100px;
         }
 
