--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -12,8 +12,9 @@
         #butt,
         #photo,
         #etext {
-            width: 3000px;
+            width: 300px;
             height: 100px;
+            font-size: 30%;
         }
 
         #photo,#etext{
