--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -14,7 +14,7 @@
         #etext {
             width: 300px;
             height: 100px;
-            font-size: 30%;
+            font-size: 3vh;
         }
 
         #photo,#etext{
