--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -12,7 +12,7 @@
         #butt,
         #photo,
         #etext {
-            width: 300px;
+            width: 60vh;
             height: 100px;
             font-size: 6vh;
         }
