--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -13,7 +13,7 @@
         #photo,
         #etext {
             width: 6vh;
-            height: 100px;
+            height: 6vh;
             font-size: 6vh;
         }
 
