--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -15,6 +15,7 @@
             width: 28vh;
             height: 16vh;
             font-size: 6vh;
+            justify-content: center;
         }
 
         #photo,#etext{
