--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -21,12 +21,16 @@
         #photo,#etext{
             visibility: hidden;
         }
+        #buttons{
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 
 <body>
 
-    <div>
+    <div id="buttons">
         <video id="vid"></video>
         <br><br>
         <button id="butt" autoplay>Scan Code</button>
