--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -22,6 +22,7 @@
             visibility: hidden;
         }
         #buttons{
+            display: flex;
             justify-content: center;
             align-items: center;
         }
