--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -12,7 +12,7 @@
         #butt,
         #photo,
         #etext {
-            width: 28vh;
+            width: 450px;
             height: 16vh;
             font-size: 2vh;
             
