--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -13,7 +13,7 @@
         #photo,
         #etext {
             width: 450px;
-            height: 16vh;
+            height: 600px;
             font-size: 2vh;
             
         }
