--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -13,7 +13,7 @@
         #photo,
         #etext {
             width: 550px;
-            height: 200px;
+            height: 20vh;
             font-size: 6vh;
             
         }
