--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -24,6 +24,7 @@
         #buttons{
             display: flex;
             justify-content: center;
+            margin-left: 200px;
             
         }
     </style>
