--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -25,6 +25,7 @@
             display: flex;
             justify-content: center;
             margin-left: 420px;
+            margin-top: 180px;
             
         }
     </style>
