--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -28,6 +28,11 @@
             margin-top: 680px;
             
         }
+        #butt{
+            border: 0px white;
+            background-color: dodgerblue;
+        }
+
     </style>
 </head>
 
