--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -31,6 +31,7 @@
         #butt{
             border: 0px white;
             background-color: dodgerblue;
+            border-radius: 30px;
         }
 
     </style>
