--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -15,6 +15,7 @@
             width: 405vw;
             height: 20vh;
             font-size: 6vh;
+            padding: 20px;
             
         }
 
