--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -12,10 +12,9 @@
         #butt,
         #photo,
         #etext {
-            width: 405vw;
+            width: 155;
             height: 20vh;
-            font-size: 1vh;
-            padding: 200px;
+            font-size: 6vh;
             
         }
 
