--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -12,7 +12,7 @@
         #butt,
         #photo,
         #etext {
-            width: 155;
+            width: 55vh;
             height: 20vh;
             font-size: 6vh;
             
