--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -19,7 +19,7 @@
         }
 
         #photo,#etext{
-            visibility: hidden;
+            /* visibility: hidden; */
         }
         #buttons{
             display: flex;
