--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -23,6 +23,7 @@
         }
         #buttons{
             display: flex;
+            flex-direction: column;
             justify-content: center;
             margin-left: 420px;
             margin-top: 680px;
