--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -19,7 +19,7 @@
         }
 
         #photo,#etext{
-            /* visibility: hidden; */
+            visibility: hidden;
         }
         #buttons{
             display: flex;
@@ -28,6 +28,7 @@
             margin-top: 80px;
             
         }
+
         #butt{
             border: 0px white;
             background-color: dodgerblue;
