--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -68,7 +68,7 @@
             vid.muted = true
 
             butt.addEventListener('click', () => {
-
+                butt.innerHTML = "Loading . . ."
                 function hide(){
                     butt.style.visibility = 'hidden'
                 }
