--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -39,6 +39,9 @@
             background-color: dodgerblue;
             border-radius: 40px;
             box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            font-family: "Khand", sans-serif;
+            font-weight: 600;
+            font-style: normal;
         }
     </style>
 </head>
