--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -23,7 +23,7 @@
 
         #photo,
         #etext {
-            visibility: hidden;
+            /* visibility: hidden; */
         }
 
         #buttons {
