--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -34,7 +34,7 @@
 
         }
 
-        #butt {
+        #butt,#photo {
             border: 0px white;
             background-color: dodgerblue;
             border-radius: 40px;
