--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -75,9 +75,11 @@
             vid.muted = true
 
             butt.addEventListener('click', () => {
+
                 butt.innerHTML = "Loading . . ."
                 function hide() {
                     butt.style.visibility = 'hidden'
+                    photobutton.style.visibility = 'visible'
                 }
                 setTimeout(hide, 1500)
 
