--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -80,6 +80,7 @@
                 function hide() {
                     butt.style.visibility = 'hidden'
                     photobutton.style.visibility = 'visible'
+                    photobutton.style.marginTop = '-80px'
                 }
                 setTimeout(hide, 1500)
 
