--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -33,6 +33,9 @@
             
 
         }
+        #photo{
+            margin-top: -20px;
+        }
 
         #butt,#photo,#etext {
             border: 0px white;
