--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -5,49 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap" rel="stylesheet">
-    <style>
-        #id {
-            border: 2px solid black;
-            width: 500px;
-            height: 500px;
-        }
-
-        #butt,
-        #photo,
-        #etext {
-            width: 45.4vh;
-            height: 20vh;
-            font-size: 6vh;
-
-        }
-
-        #photo,
-        #etext {
-            visibility: hidden;
-        }
-
-        #buttons {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            
-
-        }
-        #photo{
-            margin-top: -20px;
-        }
-
-        #butt,#photo,#etext {
-            border: 0px white;
-            background-color: dodgerblue;
-            border-radius: 40px;
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            font-family: "Khand", sans-serif;
-            font-weight: 600;
-            font-style: normal;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="book.css">
 </head>
 
 <body>
