--- a/book/index.html
+++ b/book/index.html
@@ -1,1 +1,9 @@
-<html></
+<html>
+
+<head>
+    <script>document.addEventListener('load',()=>{
+        window.location = 'https://www.beyondmebtw.com/projects/book'
+    })</script>
+</head>
+
+</html>
