--- a/book/index.html
+++ b/book/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <script>document.addEventListener('load',()=>{
-        window.location = 'https://www.beyondmebtw.com/projects/book'
-    })</script>
+    <script>
+        window.location = 'mylibrary.life'
+    </script>
 </head>
 
 </html>
