--- a/book/index.html
+++ b/book/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <script>
-        window.location = 'mylibrary.life'
+        window.location = 'https://mylibrary.life'
     </script>
 </head>
 
