--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -9,7 +9,7 @@
 </body>
 <script>
     var check = document.querySelector('#check')
-    check.addEventListener('click', () => {        
+    check.addEventListener('click', () => {
         if (!("BarcodeDetector" in globalThis)) {
             alert("Barcode Detector is not supported by this browser.");
         } else {
@@ -17,9 +17,18 @@
 
             // create new detector
             const barcodeDetector = new BarcodeDetector({
-                formats: ["code_128", "code_39", "code_93","codabar","ean_13","ean_8","itf","upc_a","upc_e"],
+                formats: ["code_128", "code_39", "code_93", "codabar", "ean_13", "ean_8", "itf", "upc_a", "upc_e"],
             });
         }
+
+        barcodeDetector
+            .detect(imageEl)
+            .then((barcodes) => {
+                barcodes.forEach((barcode) => console.log(barcode.rawValue));
+            })
+            .catch((err) => {
+                console.log(err);
+            });
 
     })
 </script>
