--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -51,7 +51,7 @@
             //     photobutton.style.visibility = 'visible'
 
             // }
-            setTimeout(hide, 1500)
+            // setTimeout(hide, 1500)
 
             mediaDevices.getUserMedia({
                 video: {
