--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -20,7 +20,7 @@
 <body>
 
     <div>
-        <video id="vid" style="display: none;"></video>
+        <video id="vid" ></video>
         <input type="file" id="fileInput" accept="image/*">
         <br><br>
         <button id="butt" autoplay>Scan Code</button>
