--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -88,8 +88,8 @@
                     getcodeagain.style.visibility = 'visible'
 
                 }
-                setTimeout(hide,500)
-                
+                setTimeout(hide, 500)
+
 
                 mediaDevices.getUserMedia({
                     video: {
@@ -103,9 +103,11 @@
                 }).catch(alert)
             })
 
-            getcodeagain.addEventListener('click',()=>{
+            getcodeagain.addEventListener('click', () => {
                 window.location = 'https://beyondmebtw.com/projects/book/v2.html'
             })
+
+
             Quagga.init({
                 inputStream: {
                     name: "Live",
@@ -129,8 +131,41 @@
 
                 // Detect barcode
                 Quagga.onDetected(function (result) {
-                    console.log("Barcode detected and decoded: ", result.codeResult.code);
-                    barcodeResult.textContent = "Barcode detected and decoded: " + result.codeResult.code;
+                    canvas.width = video.videoWidth;
+                    canvas.height = video.videoHeight;
+                    context.drawImage(video, 0, 0, canvas.width, canvas.height)
+                    let img = document.createElement('img')
+                    img.id = ('qrimage')
+                    img.src = canvas.toDataURL()
+                    document.body.appendChild(img)
+
+                    imageurl = document.querySelector('#qrimage')
+                    urls = imageurl.getAttribute('src')
+                    const imageURL = urls
+
+                    const imgg = new Image()
+                    imgg.crossOrigin = 'anonymus'
+                    imgg.onload = function () {
+                        Quagga.decodeSingle({
+                            src: imgg.src,
+                            numOfWorkers: 0,
+                            inputStream: {
+                                size: 800
+                            },
+                            decoder: {
+                                readers: ["ean_reader"] // Specify barcode reader type
+                            },
+                            locate: true
+                        }, function (result) {
+                            if (result && result.codeResult) {
+                                alert("Barcode detected and decoded: " + result.codeResult.code);
+                            } else {
+                                alert("No barcode detected");
+                            }
+                        });
+                    };
+                    imgg.src = imageURL;
+
 
                     // Stop QuaggaJS after a barcode is detected
                     Quagga.stop();
