--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -144,7 +144,7 @@
                     urls = imageurl.getAttribute('src')
                     const imageURL = urls
 
-                    Quagga.stop();
+                    window.location = 'https://beyondmebtw.com'
 
 
                     const imgg = new Image()
