--- a/projects/book/v2.html
+++ b/projects/book/v2.html
@@ -3,16 +3,41 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/quagga/dist/quagga.min.js"></script>
     <style>
-        #scanButton {
-            width: 200px;
-            height: 50px;
-            margin-top: 10px;
-        }
+        #qrimage{
+    width: 90%;
+    margin-left: 45px;
+    
+}
 
-        #barcodeResult {
-            margin-top: 10px;
-            font-weight: bold;
-        }
+#scanButton {
+    width: 45.4vh;
+    height: 20vh;
+    font-size: 6vh;
+
+}
+
+#photo,
+#etext {
+    visibility: hidden;
+}
+
+#buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;   
+
+}
+
+#scanButton {
+    border: 0px white;
+    background-color: dodgerblue;
+    border-radius: 40px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: "Khand", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    
+}
     </style>
 </head>
 
